--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <header class="cabeçalho">
                 <span class="cabeçalho_menu-hamburguer"></span>
                 <img src="img/Logo.svg" alt="Logo da alurabooks">
+                 <a href=" # "><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                 <a href=" # "><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+                 <a href=" # "><img src="img/Usuario.png" alt="Meu perfil"></a>
             </header>
     
          </body>
