--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         </head>
         <body>
             <header class="cabeçalho">
+            <div class="container">
                 <span class="cabeçalho_menu-hamburguer"></span>
-                <img src="img/Logo.svg" alt="Logo da alurabooks">
-                 <a href=" # "><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <img src="img/Logo.svg" alt="Logo da alurabooks" class="container__imagem">
+            </div>
+            <div class="container">
+                 <a href=" # "><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
                  <a href=" # "><img src="img/Compras.svg" alt="Carrinho de compras"></a>
                  <a href=" # "><img src="img/Usuario.png" alt="Meu perfil"></a>
+                </div>
             </header>
-    
          </body>
 </html>
