--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
         <body>
             <header class="cabeçalho">
             <div class="container">
-                <span class="cabeçalho_menu-hamburguer"></span>
+                <input type="checkbox" id="menu" class="container__botao">
+                <label for="menu">
+                    <span class="cabeçalho_menu-hamburguer"></span>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__titulo">Categorias</li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Programação</a>
+                    </li>
+                </ul>
                 <img src="img/Logo.svg" alt="Logo da alurabooks" class="container__imagem">
             </div>
             <div class="container">
                  <a href=" # "><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-                 <a href=" # "><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-                 <a href=" # "><img src="img/Usuario.png" alt="Meu perfil"></a>
+                 <a href=" # "><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+                 <a href=" # "><img src="img/Usuario.png" alt="Meu perfil" class="container__imagem"></a>
                 </div>
             </header>
          </body>
