--- a/index.html
+++ b/index.html
@@ -14,19 +14,31 @@
                 <label for="menu">
                     <span class="cabeçalho_menu-hamburguer"></span>
                 </label>
-                <ul class="lista-menu">
-                    <li class="lista-menu__titulo">Categorias</li>
-                    <li class="lista-menu__item">
-                        <a href="#" class="lista-menu__link">Programação</a>
-                    </li>
-                </ul>
                 <img src="img/Logo.svg" alt="Logo da alurabooks" class="container__imagem">
             </div>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categorias</li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Font-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Desing & UX</a>
+                </li>
+            </ul>
             <div class="container">
                  <a href=" # "><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
                  <a href=" # "><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
                  <a href=" # "><img src="img/Usuario.png" alt="Meu perfil" class="container__imagem"></a>
-                </div>
+            </div>
             </header>
          </body>
 </html>
