--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             <title>alurabooks</title>
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="reset.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap" rel="stylesheet">
         </head>
         <body>
             <header class="cabeçalho">
@@ -14,7 +17,9 @@
                 <label for="menu">
                     <span class="cabeçalho_menu-hamburguer"></span>
                 </label>
+                <img src="img/Menu.svg" alt="menu" class="container__imagem">
                 <img src="img/Logo.svg" alt="Logo da alurabooks" class="container__imagem">
+
             </div>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
@@ -34,11 +39,17 @@
                     <a href="#" class="lista-menu__link">Desing & UX</a>
                 </li>
             </ul>
+
             <div class="container">
                  <a href=" # "><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
                  <a href=" # "><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
                  <a href=" # "><img src="img/Usuario.png" alt="Meu perfil" class="container__imagem"></a>
             </div>
             </header>
+            <section class="banner">
+                <h2 class="banner__titulo">Ja sabe por onde começar?</h2>
+                <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+                <input type="search" class="banner__pesquia" placeholder="Qual sera sua proxima leitura?">
+            </section>
          </body>
 </html>
