--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+            <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
         </head>
         <body>
             <header class="cabeçalho">
@@ -51,5 +54,30 @@
                 <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
                 <input type="search" class="banner__pesquia" placeholder="Qual sera sua proxima leitura?">
             </section>
-         </body>
+            <section class="carrossel">
+                <h2 class="carrossel__titulo">novos lançamentos</h2>
+                <!-- Slider main container -->
+            <div class="swiper">
+            <!-- Additional required wrapper -->
+             <div class="swiper-wrapper">
+             <!-- Slides -->
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+             ...
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+  
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+  
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+            </div>
+            </section>
+            <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+        
+        </body>
 </html>
