--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                 <!-- Slider main container -->
             <div class="swiper">
             <!-- Additional required wrapper -->
-             <div class="swiper-wrapper">
+            <div class="swiper-pagination"></div>
+
+            <div class="swiper-wrapper">
              <!-- Slides -->
             <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="livro sobre apach Kafka e spring boot da Alurabooks"></div>
             <div class="swiper-slide"><img src="img/Javascript.png" alt="livro sobre Javascript da Alurabooks"></div>
@@ -74,7 +76,6 @@
             <div class="swiper-button-next"></div>
   
             <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
             </div>
             </section>
             <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -83,6 +84,10 @@
             const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
             slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
             });
             </script>
           
