--- a/index.html
+++ b/index.html
@@ -95,6 +95,29 @@
                 </div>
             </div>
             </section>
+
+            <section class="topicos">
+                <h2 class="topicos__titulo">TOPICOS VISITADOS RECENTEMENTE</h2>
+                <ul class="topicos__lista">
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">Android</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">Marketing Digital</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">Agile</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">Startups</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">HTML e CSS</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">Python</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">00</a>
+                    <li class="topicos__item">
+                        <a href="#" class="topicos__link">Java</a>
+                    </li>
+                </ul>
+            </section>
             <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
            
             <script> 
