--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                     </li>
                 </ul>
             </section>
+            <section class="contato">
+                <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+                <p class="contato__texto">Atualizações de -books, novos livros, promoções e outros.</p>
+                <input type="email" placeholder="Cadastre se e-mail" class="contato__email">
+            </section>
             <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
            
             <script> 
