--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
             },
             });
             </script>
-          
+
+            <hr/>
+
+            <footer clas="rodape">
+                <h2 class="rodape__titulo">Grupo Alura</h2>
+            </footer>          
         </body>
 </html>
